--- a/Ola.html
+++ b/Ola.html
@@ -1,1 +1,23 @@
+<!doctype html> 
+<html>
+    <head>
+        <title> Ola sin side
+        </title>
+<link rel="stylesheet" type="text/css"
+href="Ola.css" />
+    </head>
+<body>
 
+    <h1> Ola Zimmermann Børresen </h1>
+
+    <p> Dette er meg! </p>
+<div class="flex-container">
+    <div> Jeg er 24 &aring;r gammel og kommer fra Sandefjord. </div>
+    <div> Til vanlig studerer jeg IT og ledelse p&aring; USN <a href="https://www.usn.no/om-usn/campusene/vestfold/">Campus Vestfold</a> </div>
+    <div> Jeg er veldig fotball interessert, og bruker mye av fritiden min p&aring; det. </div>
+</div>
+
+    <img src="https://scontent.fsvg1-1.fna.fbcdn.net/v/t1.15752-9/339833650_671474854786743_8243543498063293090_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=0024fc&_nc_ohc=jfHLsn5saHYQ7kNvwG5yZAW&_nc_oc=AdmUwoBEoZAsLcVIvVe2ufsZJ58HAo8yuo4GpeuRWVHcRSFcPQCeI3EHPkc8BYF-ryEkyeGIjsZVfEzufSnbz_zd&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fsvg1-1.fna&oh=03_Q7cD3gFCFbRWkCMNEQeBqn8tN1rmi8KLhOppQobkWRcR-_Rydg&oe=6926DC64" alt="Her er et bilde av laget mitt"/>
+
+</body>
+</html> 
