--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title> Arbeidskrav WES </title>
         <link rel="stylesheet" type="text/css"
-href="some.css" />
+href="Ola.css" />
     </head>
     <body>
     <header> Arbeidskrav WES </header>
