--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html> 
-<html>
+<html> 
     <head>
-        <title> Arbeidskrav WES </title>
+        <title> Ola sin side </title>
         <link rel="stylesheet" type="text/css"
 href="Ola.css" />
     </head>
     <body>
-    <header> Arbeidskrav WES </header>
+    <header> Ola sin side </header>
 
 <ul class="topnav">
   <li><a href="index.html">Hjem</a></li>
   <li><a href="Ola.html">Ola sin side</a></li>
 </ul>
+ 
 
-
-</body> 
+    </body> 
