--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>Ola sin side</title>
-    <link rel="stylesheet" type="text/css" href="Ola.css" />
+    <link rel="stylesheet" type="text/css" href="ola.css" />
 </head>
 <body>
 
     <!-- Navigasjon -->
     <ul class="topnav">
-        <li><a href="Ola.html">Hjem</a></li>
+        <li><a href="index.html">Hjem</a></li>
     </ul>
 
     <!-- Tittel -->
