--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Ola sin side</title>
-    <link rel="stylesheet" type="text/css" href="ola.css" />
+    <link rel="stylesheet" type="text/css" href="Ola.css" />
 </head>
 <body>
 
