første utkast agile s

--- a/agilemetoder.html
+++ b/agilemetoder.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="no">
+<head>
+    <meta charset="UTF-8" />
+    <title>Agile systemutviklingsmetoder</title>
+    <link rel="stylesheet" type="text/css" href="Ola.css" />
+</head>
+<body>
 
+<div class="flex-container">
+    <h1>Agile systemutviklingsmetoder</h1>
+    <p>Agile systemutviklingsmetoder handler om å arbeide med å utvikle programvare på en fleksibel og smidig måte. 
+       I stedet for å planlegge alt i detalj før man starter, arbeider man i små deler og forbedrer systemet underveis.
+       Dette kan bidra til å gjøre det enklere å tilpasse seg endriger og få til et bedre sluttresultat. </p>
+    <p>Ordet agile betyr smidig eller tilpasningsdyktig. 
+       I 2001 ble Agile Manifesto utarbeidet av en gruppe utviklere som ønsket en ny og bedre måte å jobbe på. 
+       De var enige om fire kjerneverdier:
+       1. Mennesker og samarbeid er viktigere enn prosesser og verktøy.
+       2. Fungerende programvare er viktigere enn masse dokumentasjon.
+       3. Samarbeid med kunden er viktigere enn kontraktsforhandlinger.
+       4. Å tilpasse seg endringer er viktigere enn å følge en plan. </p>
+    <p>Scrum, Kanban og Extreme Programming (XP) er eksempler på populære agile metoder.
+       Felles for dem er at de deler et prosjekt i korte perioder, kalt iterasjoner eller sprinter.
+       Etter hver periode vurderer teamet hva som fungerer, og hva som eventuelt kan utbedres før neste runde. </p>
+    <p>Mange bruker agile systemutviklingsmetoder fordi de kan gi raskere resultater og bedre samarbeid.
+       Kunden kan få se og teste produktet tidlig, slik at teamet kan gjøre nødvendige endringer basert på tilbakemeldinger.
+       Slik kan systemet bli mer brukervennlig. 
+       Agile metoder kan derfor passe spesielt godt når kravene endrer seg underveis, eller når man ikke vet helt nøyaktig hvordan sluttproduktet skal være. </p>
+    <p>Det finnes både fordeler og ulemper ved å bruke agile metoder.
+       Fordelene er at man får mer fleksibilitet, god kommunikasjon og muligheten til å oppdage feil tidlig.
+       det kan også gjøre teamet mer engasjert, og kunden får mer innflytelse.
+       Ulemper kan være at metoden krever tett samarbeid og mye kommunikasjon.
+       Hvis teamet har lite erfaring, kan det bli uoversiktlig.
+       Det kan bli vanskelig å holde styr på alt når det er et stort prosjekt med mange mennesker. </p>
+    <p>Kort sagt handler agile systemutviklingsmetoder om å utvikle programvare på en smidig og tilpasningsdyktig måte.
+       Det kan gi bedre samarbeid, raskere og bedre tilbakemeldinger og produkter som passer bedre til brukernes behov. </p>
+    <p>Litteraturliste: Notater og PowerPoint fra forelesninger. </p>
+</div>
