andre utkast agile s

--- a/agilemetoder.html
+++ b/agilemetoder.html
@@ -36,3 +36,5 @@
        Det kan gi bedre samarbeid, raskere og bedre tilbakemeldinger og produkter som passer bedre til brukernes behov. </p>
     <p>Litteraturliste: Notater og PowerPoint fra forelesninger. </p>
 </div>
+</body>
+</html>
